# crazybox

./: Cargo.toml  Dockerfile
.devcontainer/: devcontainer.json  init.sh
scripts/: local.sh  xquartz.sh
src/: lib.rs
src/drivers/: crazyflie.rs  mod.rs  sim.rs
src/ros/: mod.rs
src/sim/: constants.rs  drone.rs  environment.rs  mod.rs  plugin.rs  state.rs  world.rs
src/types/: mod.rs
