
[workspace]
members = [
    "sim",      # Bevy/Rapier physics simulation
    "ros",     # ROS2 node implementation
    "types",    # Shared types and constants
    "control",  # Control algorithms and state management
]
resolver = "2"

[workspace.dependencies]
# Simulation
bevy = "0.12"
bevy_rapier3d = "0.22.0"

# ROS2
r2r = "0.7.1"

# Shared
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
crazyflie-lib = "0.2.0"