[package]
name = "crazybox"
version = "0.1.0"
edition = "2021"

[dependencies]
r2r = "0.7"
crazyflie-lib = "0.2"
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
async-trait = "0.1.83"
futures-util = "0.3.31"

[lib]
name = "crazybox"
path = "src/lib.rs"
